test/classes/initializers/phase1/hasIfImplicit.good
hasIfImplicit.chpl:5: In initializer:
hasIfImplicit.chpl:9: error: can't initialize field "f2" inside a conditional during phase 1 of initialization
